Attached Javascript to index
+ Added jquery, electron to dev environment
+ Added index.js to increment a count on a button click
+ added Icon to application tray.
+ update CSS with custom class
+ updated CSS with color scheme closer to intent.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>JAETE</title>
-
     <link rel="stylesheet" href="./css/styles.css">
-
 </head>
 <body>
 
-<div class="List">
-    <ul>
-      Hello, World!
-    </ul>
-</div>
+  <h1>Hello, World!</h1>
+  <p>
+  You have clicked the button <counter id="clickCounter"></counter> time(s)!
+  <br/>
+  <button id="btn_Count">ClickMe!</button>
+  </p>
+  <script src="./js/index.js"></script>
 
-<!-->In Electron, this is the correct way to include jQuery<-->
-<script>window.$ = window.jQuery = require('./js/jquery.min.js');</script>
-<script src="./js/jquery.flipster.min.js"></script>
-<script src="./js/script.js"></script>
 </body>
 </html>
