Custom CSS Tags
+ Added 'icon' class to load a small version of the Icon
=n Might use as a controlled toolbar
=n Might usurp the existing Electron Menubar
+ Added some additional Icon files.
+ Captured some pallete information, and update CSS.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-
-  <h1>Hello, World!</h1>
+  <div class="icon"><p>(Some buttons will eventually go here)</p></div>
+  <h1>Hello, JAETE!</h1>
   <p>
   You have clicked the button <counter id="clickCounter"></counter> time(s)!
   <br/>
