Add User Input areas
+ Updated index for text area, FileName, and Password inputs
+ Added buttons for Load and Save 
=n Click functions are merely placeholders
+ Updated CSS with new styles for text area.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <div class="icon"><p>(Some buttons will eventually go here)</p></div>
-  <h1>Hello, JAETE!</h1>
-  <p>
-  You have clicked the button <counter id="clickCounter"></counter> time(s)!
-  <br/>
-  <button id="btn_Count">ClickMe!</button>
-  </p>
+  <div class="JAETEMenu">
+    File: <input id="txt_FileName" type ="text">
+    </br>
+    Password: <input id="txt_Password" type="password">
+    </br>
+    <button id="btn_Load"> Open...</button>
+    <button id="btn_Save"> Save </button>
+  </div>
+  <textarea id="txt_Content">Enter some text here!</textarea>
   <script src="./js/index.js"></script>
-
 </body>
 </html>
