--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="JAETEMenu">
-    File: <input id="txt_FileName" type ="text">
+    File: <input id="txt_FileName" type ="text" value="/home/dev/.git/JAETE/doc/run.md">
     </br>
     Password: <input id="txt_Password" type="password">
     </br>
