Add Basic Load Decrypt,Update jCrypto Exports
+ Updated jCryptop.decryp
=n swapped args, used Decipher in similar manner to encrypt
+ updated index.js 'load' to decrypt
+ Verified decryption using run.etxt from previous commit.
+ Great Joy is felt!!!

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="JAETEMenu">
-    File: <input id="txt_FileName" type ="text" value="/home/dev/.git/JAETE/doc/run.md">
+    File: <input id="txt_FileName" type ="text">
     </br>
     Password: <input id="txt_Password" type="password">
     </br>
